feat: support chrome

--- a/setting/options.html
+++ b/setting/options.html
@@ -8,6 +8,10 @@
         margin: 0;
         line-height: 1.6;
       }
+
+      body {
+        min-width: 200px;
+      }
     </style>
   </head>
 
@@ -24,7 +28,7 @@
         </p>
     </form>
 
-    <script src="options.js"></script>
+    <script src="../dist/options.js"></script>
 
   </body>
 
